fix text alignment on varying screen sizes

--- a/less/app.less
+++ b/less/app.less
@@ -214,7 +214,7 @@ header {
     }
 
     .header-wrapper{
-    	padding-left:15px;
+    	padding-left:25px;
     }
 
     .share{
@@ -249,7 +249,7 @@ header {
 
 	@media screen and (max-width: 1200px){
 		.header-wrapper {
-			// padding-right: 200px;
+			padding-left: 15px;
 		}
 	}
 
@@ -1585,7 +1585,6 @@ footer {
 }
 
 @media (min-width: @screen-sm){
-
 	// .header-wrapper {
 	// 	padding: 0 30px 20px 30px;
 	// }
@@ -1625,6 +1624,9 @@ footer {
 				margin-left: 4px;
 				padding-left:10px;
 				-webkit-font-smoothing: antialiased;
+				@media (max-width: 1200px){
+					padding-left:10px;
+				}
 			}
 
 			.tags {
